[package]
name = "bloom_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
bit-vec = "0.6.3"
clap = { version = "3.2.21", features = ["derive"] }
rand = "0.8.5"
siphasher = "0.3"
